updates table, starts exp_cmask_1_25ms_ds8 training

--- a/table.tex
+++ b/table.tex
@@ -7,6 +7,7 @@
 20.0 & 10 & TD & [28, 37, 46, 54] & \cellcolor{green!20}1.94 & \cellcolor{green!20}7.99 & \cellcolor{green!20}2.52 & \cellcolor{green!20}2.48 & \cellcolor{green!20}2.44 & \cellcolor{green!20}2.64 & \cellcolor{green!20}2.84 & \cellcolor{green!20}2.48 & \cellcolor{green!50}2.57 \\
 \hdashline
 \midrule
+10.0 & 20 & CMask & [46, 54, 62, 70] & 1.79 & 7.12 & 2.42 & 2.40 & 2.32 & 2.62 & 2.76 & 2.37 & 2.48 \\
 10.0 & 10 & CMask & [28, 37, 46, 54] & \cellcolor{green!20}1.88 & \cellcolor{green!20}7.76 & 2.46 & \cellcolor{green!20}2.46 & \cellcolor{green!20}2.41 & \cellcolor{green!20}2.65 & 2.90 & 2.50 & \cellcolor{green!50}2.56 \\
 10.0 & 5 & CMask & [21, 26, 31, 36] & 1.87 & 7.51 & \cellcolor{green!20}2.46 & 2.44 & 2.39 & 2.64 & \cellcolor{green!20}2.92 & \cellcolor{green!20}2.51 & 2.56 \\
 10.0 & 10 & TD & [28, 37, 46, 54] & \cellcolor{green!20}1.86 & \cellcolor{green!20}7.54 & \cellcolor{green!20}2.48 & \cellcolor{green!20}2.43 & \cellcolor{green!20}2.35 & 2.62 & 2.80 & 2.45 & 2.52 \\
@@ -23,6 +24,12 @@
 2.5 & 5 & CMask & [19, 24, 28, 32] & \cellcolor{green!20}1.76 & \cellcolor{green!20}6.50 & 2.38 & 2.32 & 2.24 & 2.54 & 2.65 & \cellcolor{green!20}2.40 & 2.42 \\
 2.5 & 10 & TD & [28, 37, 46, 54] & 1.74 & \cellcolor{green!20}6.57 & 2.39 & \cellcolor{green!20}2.29 & \cellcolor{green!20}2.24 & \cellcolor{green!20}2.58 & \cellcolor{green!20}2.63 & \cellcolor{green!20}2.39 & \cellcolor{green!50}2.42 \\
 2.5 & 5 & TD & [21, 25, 30, 34] & \cellcolor{green!20}1.77 & 6.52 & \cellcolor{green!20}2.40 & 2.26 & 2.23 & 2.55 & 2.60 & 2.34 & 2.40 \\
+\hdashline
+\midrule
+1.25 & 10 & CMask & [24, 29, 34, 38] &  &  &  &  &  &  &  &  &  \\
+1.25 & 5 & CMask & [17, 20, 23, 26] &  &  &  &  &  &  &  &  &  \\
+1.25 & 10 & TD & [28, 37, 46, 54] &  &  &  &  &  &  &  &  &  \\
+1.25 & 5 & TD & [21, 25, 29, 34] &  &  &  &  &  &  &  &  &  \\
 \hdashline
 \midrule
 -5.0 & 5 & TD & [21, 25, 30, 34] & 1.53 & 4.24 & 2.31 & 2.03 & 2.06 & 2.44 & 2.17 & 2.10 & 2.19 \\
